--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,3 +17,5 @@ bind-key C-j select-pane -D
 bind-key C-h select-pane -L
 bind-key C-l select-pane -R
 
+bind-key C-s choose-tree
+bind-key C-w choose-window
